<resources>
    <string name="app_name">Melody</string>
    <string name="hitforMemoryDescription">Say something about your memory!</string>
    <string name="create_new_account">Create account</string>
    <string name="country_city">Country, city</string>
    <string name="username">Username</string>
    <string name="friends">Friends</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="author">Author</string>
    <string name="serializableLocation">Location</string>
    <string name="time">Time</string>
    <string name="content_description">content_description</string>
    <string name="ChooseRadius">Please choose a radius</string>
    <string name="showRadiusMessage">Show memories posted within %1$d km.</string>
    <string name="briefText">%1$s …</string>
    <string name="commentTitle">Add Comment</string>
    <string name="addCommentHint">Say something about this memory … </string>
    <string name="title_activity_show_map">Map</string>
    <string name="zero">0</string>
    <string name="time_changing">Time travel</string>
    <string name="show_friends">Friends</string>
    <string name="friends_list">My friends</string>
    <string name="settings">Settings</string>
    <string name="friendRequest">Send a friend request</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="play">PLAY</string>
    <string name="commentAuthorPic">Comment Author Picture</string>
    <string name="select_privacy">Select Privacy:</string>
    <string name="my_friends_requests">My Friends Requests</string>
    <string name="remove_friend_request">Remove friend request</string>
    <string name="confirm_friend_request">Confirm friend request</string>
    <string name="refuse_friend_request">Refuse friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="you_are_friends">You are now friends !</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="link_to_login">Already registered. Login!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your registered Email to send you password reset instructions.</string>

    <!--Don't fix the follow lint!-->
    <string name="web_client_id">90372047742-46j4klcbiheuec6q73gbicrvubn2oetd.apps.googleusercontent.com</string>

    <string name="create_display_name">Nick Name</string>
    <string name="email_is_empty">Enter email address!</string>
    <string name="password_is_empty">Enter password!</string>
    <string name="nickname_is_empty">Enter your nickname!</string>
    <string name="reset_password_empty">Enter your registered email!</string>
    <string name="send_reset_password_email">We have sent you instructions to reset your password!</string>
    <string name="fail_send_rest_password_email">Failed to send reset email!</string>
    <string name="edit"><u>Edit</u></string>
    <string name="edit_user_name">Edit user name</string>
    <string name="change_user_profile">Change user profile</string>
    <string name="save">Save</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="change_biography">Change biography</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="search_users">Search Users</string>
</resources>
